Enabled scroll on left nav overflow. Resolves #637.

--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -11,6 +11,7 @@
 .sideNav {
     margin: 0 0 32px;
     padding-bottom: 32px;
+    overflow-y: scroll;
 }
 
 /* List style - <ul> */
